--- a/Bootstrap/01_grid.html
+++ b/Bootstrap/01_grid.html
@@ -8,7 +8,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+
+        <div class="row">
+            <!-- <div class="col-12  bg-primary-subtle border border-primary border-3 p-3 rounded-3"> 1 </div>
+            <!-- col-숫자 : 12칸을 어떻게 나눠 먹을 것인지를 정함 -->
+            <!-- <div class="col-12 col-md-6 bg-primary-subtle border border-primary border-3 p-3 rounded-3"> 2 </div> -->
+            <!-- <div class="col-12 col-md-6 bg-primary-subtle border border-primary border-3 p-3 rounded-3"> 3 </div> -->
+            <!-- <div class="col-12 col-md-6 bg-primary-subtle border border-primary border-3 p-3 rounded-3"> 4 </div> --> 
+            <!-- col-md-6 : 반응형으로 바뀜 -->
+            <div class="col-12 col-sm-6 col-md-12 col-lg-3 col-xl-2
+                    bg-primary-subtle border border-3 border-primary p-3 rounded-3">col</div>
+                    <div class="col-12 col-sm-6 col-md-12 col-lg-3 col-xl-2
+                    bg-primary-subtle border border-3 border-primary p-3 rounded-3">col</div>
+                    <div class="col-12 col-sm-6 col-md-12 col-lg-3 col-xl-2
+                    bg-primary-subtle border border-3 border-primary p-3 rounded-3">col</div>
+                    <div class="col-12 col-sm-6 col-md-12 col-lg-3 col-xl-2
+                    bg-primary-subtle border border-3 border-primary p-3 rounded-3">col</div>
+                    <div class="col-12 col-sm-6 col-md-12 col-lg-3 col-xl-2
+                    bg-primary-subtle border border-3 border-primary p-3 rounded-3">col</div>
+                    <div class="col-12 col-sm-6 col-md-12 col-lg-3 col-xl-2
+                    bg-primary-subtle border border-3 border-primary p-3 rounded-3">col</div>
+                    
+
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
